# drf-react-template-framework

./: .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  LICENSE  Pipfile  README.md  pyproject.toml  setup.cfg  setup.py
.github/actions/: drf-react-template-framework-build.yml
.github/actions/drf-react-template-framework-build/: action.yml
.github/workflows/: codeql.yml  continuous_integration.yml  release.yml
drf_react_template/: mixins.py  renderers.py  schema_form_encoder.py  validators.py
example/: README.md  example.sqlite3  settings.py  urls.py
example/polls/: apps.py  models.py  serializers.py  viewsets.py
example/polls/migrations/: 0001_initial.py
tests/: conftest.py  factories.py  test_schema_form_encoder.py  test_viewsets.py
tests/test_examples/choice_and_question/: serializers.py  viewsets.py
tests/test_examples/question_and_choice/: viewsets.py
