[tool.poetry]
name = "drf-react-template-framework"
version = "0.0.1"
description = "Django REST Framework plugin that creates form schemas for react-jsonschema-form"
authors = ["stuart.bradley <stuy.bradley@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/yoyowallet/drf-react-template-framework"
repository = "https://github.com/yoyowallet/drf-react-template-framework"
keywords = ["drf", "react"]
classifiers = [
    'Development Status :: 3 - Alpha',
    'Programming Language :: Python :: 3',
    'License :: OSI Approved :: MIT License',
    'Operating System :: OS Independent',
    'Intended Audience :: Developers',
    'Topic :: Software Development :: Libraries',
    'Framework :: Django',
]
include = [
    "LICENSE",
]
packages = [
    { include="drf_react_template" },
]

[tool.poetry.dependencies]
python = "^3.7"
djangorestframework = ">=3.0.0,<4.0.0"

[tool.poetry.dev-dependencies]
pre-commit = "^2.7.1"
pytest = "^6.1.1"
pytest-django = "^3.10.0"
factory-boy = "^3.1.0"
pytest-cov = "^2.10.1"

[tool.black]
target-version = ['py37']
include = '\.pyi?$'
skip-string-normalization = true
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE='example.settings'
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

